--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,19 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/wisdombook?createDatabaseIfN
 spring.datasource.username=root
 spring.datasource.password=sapassword
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
+
+
+#spring.application.name=wisdom-books
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://KING\\SQLEXPRESS:1433;databaseName=wisdom_books;encrypt=false;trustServerCertificate=true
+#spring.datasource.username=sa
+#spring.datasource.password=sapassword
+#
+## --- JPA ---
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
