--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.4.0.jre11</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
