Format api response

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.show-sql=true
 # Logging
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
-logging.file.name=logs/myapplication.log
-logging.config=classpath:logback-spring.xml
+#logging.file.name=logs/myapplication.log
+#logging.config=classpath:logback-spring.xml
 
