--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=wisdom-books
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/wisdombook?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mariadb://wisdom-db.c5me8qseq96g.ap-southeast-1.rds.amazonaws.com/wisdombook?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=sapassword
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Logging
