--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "animate.css": "^4.1.1",
     "atropos": "^2.0.2",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.553.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -24,6 +26,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "react-slick": "^0.31.0",
+    "recharts": "^3.5.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.17",
     "vietnam-address-database": "^1.0.0"
