upload file image book for admin

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,3 +14,6 @@ logging.level.org.hibernate=error
 #logging.file.name=logs/myapplication.log
 #logging.config=classpath:logback-spring.xml
 
+king.upload-file.base-uri=file:///D:/tuhocode/JavaSpringRESTFulAPIs/Job_Hunter/upload/
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
