update application upload file

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,6 +14,6 @@ logging.level.org.hibernate=error
 #logging.file.name=logs/myapplication.log
 #logging.config=classpath:logback-spring.xml
 
-king.upload-file.base-uri=file:///D:/tuhocode/JavaSpringRESTFulAPIs/Job_Hunter/upload/
+king.upload-file.base-uri=file:///D:/nam4/3.WWW_Java/BaiTapLon/wisdom-books/backend/upload/
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
