Add AWS Cognito authentication and account features
Integrated AWS Cognito for user authentication and management in the backend, including registration, login, password reset, and user info endpoint. Updated security settings and dependencies. Frontend changes include new authentication API and UI components for login, signup, and password reset.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=wisdom-books
-
+logging.level.me.paulschwarz=DEBUG
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://wisdom-db.c5me8qseq96g.ap-southeast-1.rds.amazonaws.com/wisdombook?createDatabaseIfNotExist=true
 spring.datasource.username=root
@@ -13,4 +13,33 @@ logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 #logging.file.name=logs/myapplication.log
 #logging.config=classpath:logback-spring.xml
+
+aws.accessKey=${AWS_ACCESS_KEY}
+aws.secretKey=${AWS_SECRET_KEY}
+aws.region=${AWS_REGION}
+
+cognito.user-pool-id=${COGNITO_USER_POOL_ID}
+cognito.client-id=${COGNITO_CLIENT_ID}
+cognito.client-secret=${COGNITO_CLIENT_SECRET}
+
+# Email Configuration (Gmail)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your-email@gmail.com
+spring.mail.password=your-app-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# OAuth2 Configuration for Google
+#spring.security.oauth2.client.registration.google.client-id=your-google-client-id
+#spring.security.oauth2.client.registration.google.client-secret=your-google-client-secret
+#spring.security.oauth2.client.registration.google.scope=profile,email
+#spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+# OAuth2 Configuration for Facebook
+#spring.security.oauth2.client.registration.facebook.client-id=your-facebook-app-id
+#spring.security.oauth2.client.registration.facebook.client-secret=your-facebook-app-secret
+#spring.security.oauth2.client.registration.facebook.scope=email,public_profile
+#spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
