--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
     "animate.css": "^4.1.1",
     "atropos": "^2.0.2",
     "axios": "^1.13.2",
-    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.553.0",
@@ -33,16 +32,23 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tanstack/react-table": "^8.21.3",
     "@types/node": "^24.10.1",
+    "@types/papaparse": "^5.5.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-slick": "^0.23.13",
+    "@types/xlsx": "^0.0.36",
     "@vitejs/plugin-react": "^4.4.1",
+    "date-fns": "^4.1.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "papaparse": "^5.5.3",
+    "react-to-print": "^3.2.0",
     "typescript": "^5.9.3",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "xlsx": "^0.18.5"
   }
 }
