update voucher controller

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,11 +6,26 @@ spring.datasource.username=root
 spring.datasource.password=sapassword
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 # Logging
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 #logging.file.name=logs/myapplication.log
 #logging.config=classpath:logback-spring.xml
+
+#Sanbox VNPay
+vnpay.tmnCode=${TMN_CODE}
+vnpay.hashSecret=${HASH_SECRET}
+vnpay.payUrl=${VNPAY_URL}
+vnpay.returnUrl=${VNPAY_RETURN_URL}
+
+#Config send email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
