--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.553.0",
     "quill": "^2.0.3",
     "react": "^19.1.0",
