--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -40,6 +40,16 @@
             <artifactId>java-dotenv</artifactId>
             <version>5.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.20.0</version> <!-- chọn version phù hợp -->
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.661</version>
+        </dependency>
 
         <dependency>
             <groupId>com.amazonaws</groupId>
