--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,6 +16,7 @@ logging.level.org.hibernate=error
 
 aws.accessKey=${AWS_ACCESS_KEY}
 aws.secretKey=${AWS_SECRET_KEY}
+aws.s3.bucket=hai-project-images
 aws.region=${AWS_REGION}
 
 cognito.user-pool-id=${COGNITO_USER_POOL_ID}
