--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=wisdom-books
 logging.level.me.paulschwarz=DEBUG
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://wisdom-db.c5me8qseq96g.ap-southeast-1.rds.amazonaws.com/wisdombook?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mariadb://localhost:3306/wisdombook?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mariadb://wisdom-db.c5me8qseq96g.ap-southeast-1.rds.amazonaws.com/wisdombook?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mariadb://localhost:3306/wisdombook?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=sapassword
 
