Fix: Add HikariCP connection pool limits to prevent RDS connection overflow

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,6 +6,13 @@ spring.datasource.url=jdbc:mariadb://wisdom-db.c5me8qseq96g.ap-southeast-1.rds.a
 spring.datasource.username=root
 spring.datasource.password=sapassword
 
+# HikariCP Connection Pool Settings
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
