--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -26,7 +26,7 @@ jobs:
               run: |
                   cd backend
                   chmod +x mvnw
-                  ./mvnw clean package -DskipTests
+                  ./mvnw clean package -DskipTests -T 2C --batch-mode
 
             - name: 📦 Verify JAR
               run: |
@@ -50,48 +50,18 @@ jobs:
                   username: ${{ secrets.EC2_USER }}
                   key: ${{ secrets.EC2_SSH_KEY }}
                   script: |
-                      # Backup JAR cũ
-                      if [ -f /opt/wisdom-books/backend/wisdom-books-0.0.1-SNAPSHOT.jar ]; then
-                        BACKUP_NAME="wisdom-books-0.0.1-SNAPSHOT.jar.backup.$(date +%Y%m%d_%H%M%S)"
-                        sudo cp /opt/wisdom-books/backend/wisdom-books-0.0.1-SNAPSHOT.jar /opt/wisdom-books/backend/$BACKUP_NAME
-                        echo "📦 Backup: $BACKUP_NAME"
-                      fi
-
-                      # Di chuyển JAR mới
+                      # Di chuyển JAR mới (không backup để nhanh hơn)
                       sudo mv /tmp/wisdom-books-0.0.1-SNAPSHOT.jar /opt/wisdom-books/backend/
                       sudo chown wisdom:wisdom /opt/wisdom-books/backend/wisdom-books-0.0.1-SNAPSHOT.jar
 
-                      # Restart service
-                      echo "🔄 Restarting service..."
+                      # Restart service nhanh
                       sudo systemctl restart wisdom-books
 
-                      # Đợi service khởi động
-                      sleep 5
-
-                      # Kiểm tra status
-                      sudo systemctl status wisdom-books --no-pager || true
-
-                      # Xóa backup cũ hơn 7 ngày
-                      find /opt/wisdom-books/backend/ -name "*.backup.*" -mtime +7 -delete 2>/dev/null || true
-
                       echo "✅ Deploy completed!"
-
-            - name: 🏥 Health Check
-              run: |
-                  echo "Waiting for application to start..."
-                  sleep 10
-
-                  # Kiểm tra health endpoint (nếu có)
-                  curl -f http://${{ secrets.EC2_HOST }}:8080/actuator/health || true
-
-                  echo "✅ Deployment successful!"
 
             - name: 📝 Deployment Summary
               if: always()
               run: |
-                  echo "## Deployment Summary" >> $GITHUB_STEP_SUMMARY
-                  echo "- **Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
-                  echo "- **Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
-                  echo "- **EC2 Host:** ${{ secrets.EC2_HOST }}" >> $GITHUB_STEP_SUMMARY
-                  echo "- **API URL:** http://${{ secrets.EC2_HOST }}:8080" >> $GITHUB_STEP_SUMMARY
-                  echo "- **Swagger:** http://${{ secrets.EC2_HOST }}:8080/swagger-ui.html" >> $GITHUB_STEP_SUMMARY
+                  echo "## ✅ Deployment Completed" >> $GITHUB_STEP_SUMMARY
+                  echo "- Branch: ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
+                  echo "- API: http://${{ secrets.EC2_HOST }}:8080" >> $GITHUB_STEP_SUMMARY
