Only deploy when backend code changes

--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -3,8 +3,10 @@ name: Deploy to EC2
 on:
     push:
         branches:
-            - main
             - develop
+        paths:
+            - "backend/**"
+            - ".github/workflows/deploy-ec2.yml"
     workflow_dispatch: # Cho phép trigger thủ công
 
 jobs:
