--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.datasource.hikari.max-lifetime=1800000
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
 
 # Logging
 logging.level.org.springframework.web=debug
