--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -13,6 +13,9 @@ jobs:
     build-and-deploy:
         runs-on: ubuntu-latest
 
+        # 🔒 Chỉ cho phép chạy job khi branch là develop
+        if: github.ref == 'refs/heads/develop'
+
         steps:
             - name: 🔍 Checkout code
               uses: actions/checkout@v4
