--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tanstack/react-table": "^8.21.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.10.1",
     "@types/papaparse": "^5.5.0",
     "@types/react": "^19.1.2",
